# eventhub-rust-client

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/publish/: Cargo.toml
examples/publish/src/: main.rs
examples/subscribe/: Cargo.toml
examples/subscribe/src/: main.rs
lib/: Cargo.toml
lib/src/: eventhub.rs  lib.rs
